demo-4/tinyapp.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: tinyapp
    version: v1
  name: tinyapp
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: tinyapp
    version: v1
  strategy:
    activeDeadlineSeconds: 21600
    type: Recreate
  template:
    metadata:
      labels:
        app: tinyapp
        version: v1
    spec:
      containers:
      - image: quay.io/siamaksade/tinyapp:v1
        imagePullPolicy: Always
        name: tinyapp
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 2
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 2
          failureThreshold: 10
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers: []
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: tinyapp
    version: v2
  name: tinyapp
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: tinyapp
    version: v2
  strategy:
    activeDeadlineSeconds: 21600
    type: Recreate
  template:
    metadata:
      labels:
        app: tinyapp
        version: v2
    spec:
      containers:
      - image: quay.io/siamaksade/tinyapp:v2
        imagePullPolicy: Always
        name: tinyapp
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 2
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 2
          failureThreshold: 10
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers: []
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tinyapp
  name: tinyapp
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: tinyapp
