demo-4/istio-rules-1.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tinyapp
spec:
  hosts:
  - "*"
  gateways:
  - tinyapp-gateway
  http:
  - match:
    - uri:
        prefix: /tinyapp
    rewrite:
      uri: /
    route:
    - destination:
        host: tinyapp
        subset: v1
      weight: 100
    - destination:
        host: tinyapp
        subset: v2
      weight: 0
