demo-4/istio-rules-2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tinyapp
spec:
  hosts:
  - "*"
  gateways:
  - tinyapp-gateway
  http:
  - match:
    - uri:
        prefix: /tinyapp
    rewrite:
      uri: /
    route:
    - destination:
        host: tinyapp
        subset: v1
    mirror:
      host: tinyapp
      subset: v2
